name:                zmime
version:             0.1.0.0
synopsis:            A Haskell MIME library
description:         A Haskell MIME library
homepage:            https://github.com/aleshgo/zmime#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Newman
maintainer:          aleshgo@gmail.com
copyright:           2017 Alexander Newman
category:            Codec
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite zmime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zmime
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aleshgo/zmime
